DZF correccion crear anuncio, agrego html error generico

--- a/AnunciosGroup0.3/web/WEB-INF/web.xml
+++ b/AnunciosGroup0.3/web/WEB-INF/web.xml
@@ -9,4 +9,7 @@
             30
         </session-timeout>
     </session-config>
+    <error-page>
+        <location>/general-error.html</location>
+    </error-page>
 </web-app>
